--- a/shelf-server/static/v2/public/global.css
+++ b/shelf-server/static/v2/public/global.css
@@ -21,6 +21,8 @@ body {
     color: var(--theme-text);
     font-family: "Noto Serif", "Noto Serif CJK JP";
     font-size: 16px;
+    margin: 0;
+    padding: 1em;
     text-rendering: optimizeLegibility;
 }
 
