--- a/shelf-server/static/v2/public/global.css
+++ b/shelf-server/static/v2/public/global.css
@@ -54,6 +54,22 @@ h3 {
     padding: 0;
 }
 
+button {
+    background: none;
+    border: 0;
+    border-bottom: 1px dotted #000;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: italic;
+    margin: 0;
+    padding: 0 1em;
+}
+
+label {
+    font-weight: bold;
+}
+
 input[type="text"] {
     background: none;
     border: 0;
@@ -62,8 +78,8 @@ input[type="text"] {
     padding: 0;
     margin: 0;
 
-    font-family: "Linux Biolinum O", sans;
-    font-size: 1.2rem;
+    font-family: inherit;
+    font-size: inherit;
 }
 
 .material-icons {
